--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "recharts": "^1.8.5",
     "typescript": "~3.7.2"
   },
   "devDependencies": {
@@ -58,6 +59,7 @@
     "@types/react-cache": "^2.0.1",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.4",
+    "@types/recharts": "^1.8.9",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.3",
     "prettier": "^2.0.4",
